force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/PM_ACCT_INVOICE_HD__x.object-meta.xml
<CustomObject>
    <description>PM_ACCT_INVOICE_HD</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>PM_ACCT_INVOICE_HD</externalName>
    <label>PM_ACCT_INVOICE_HD</label>
    <pluralLabel>PM_ACCT_INVOICE_HD</pluralLabel>
</CustomObject>