force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <externalDeveloperName>PROJECT_ID</externalDeveloperName>
    <label>Job</label>
    <length>255</length>
    <referenceTargetField>Job__c.WCGTProjectID__c</referenceTargetField>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>PM_ACCT_INVOICE_HD</relationshipLabel>
    <relationshipName>PM_ACCT_INVOICE_HD</relationshipName>
    <type>IndirectLookup</type>
</CustomField>