force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/NATURE_OR_SAC__c.field-meta.xml
<CustomField>
    <fullName>NATURE_OR_SAC__c</fullName>
    <description>NATURE_OR_SAC</description>
    <externalDeveloperName>NATURE_OR_SAC</externalDeveloperName>
    <label>NATURE_OR_SAC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>