force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <externalDeveloperName>PROJECT_ID</externalDeveloperName>
    <label>Opportunity</label>
    <length>255</length>
    <referenceTargetField>Opportunity.WCGT_Job_ID__c</referenceTargetField>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PM_ACCT_INVOICE_HD</relationshipLabel>
    <relationshipName>PM_ACCT_INVOICE_HD</relationshipName>
    <type>IndirectLookup</type>
</CustomField>